fix segment selector in edit not visible

--- a/plugins/Morpheus/stylesheets/ui/_components.less
+++ b/plugins/Morpheus/stylesheets/ui/_components.less
@@ -129,11 +129,13 @@
         }
 
         a.dropdown {
+            display: inline;
             color: @theme-color-text;
             background: url('plugins/Morpheus/images/sort_subtable_desc.png') 100% -2px no-repeat;
             &.ui-autocomplete-input {
                 background-position: 100% -2px;
             }
+            .font-default(10px, 12px);
         }
     }
     .segment-footer {
